--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "main": "src/index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config webpack.dev.js",
-    "start": "webpack-dev-server --host 0.0.0.0 --config webpack.dev.js --progress --colors --hot -d --open --inline",
-    "dist": "webpack src/index.js dist/aframe-motion-capture-components.js && webpack -p src/index.js dist/aframe-motion-capture-components.min.js", "lint": "semistandard -v | snazzy",
+    "start": "webpack-dev-server --host 0.0.0.0 --port 9090 --config webpack.dev.js --progress --colors --hot -d --open --inline",
+    "dist": "webpack src/index.js dist/aframe-motion-capture-components.js && webpack -p src/index.js dist/aframe-motion-capture-components.min.js",
+    "lint": "semistandard -v | snazzy",
     "prepublish": "npm run dist",
     "preghpages": "npm run build && shx rm -rf gh-pages && shx mkdir gh-pages && shx cp -r examples/* gh-pages",
     "ghpages": "npm run preghpages && gh-pages -d gh-pages",
@@ -35,26 +36,26 @@
   },
   "homepage": "https://github.com/dmarcos/aframe-motion-capture-components#readme",
   "devDependencies": {
-    "aframe": "^0.8.2",
-    "chai": "^3.4.1",
+    "aframe": "^0.9.2",
+    "chai": "^4.2.0",
     "chai-shallow-deep-equal": "^1.3.0",
-    "cross-env": "^3.1.3",
-    "gh-pages": "^0.11.0",
-    "karma": "^0.13.15",
-    "karma-browserify": "^4.4.2",
+    "cross-env": "^5.2.0",
+    "gh-pages": "^2.1.0",
+    "karma": "^4.2.0",
+    "karma-browserify": "^6.1.0",
     "karma-chai-shallow-deep-equal": "0.0.4",
-    "karma-chrome-launcher": "2.0.0",
+    "karma-chrome-launcher": "3.0.0",
     "karma-env-preprocessor": "^0.1.1",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-mocha": "^0.2.1",
-    "karma-mocha-reporter": "^1.1.3",
-    "karma-sinon-chai": "^1.1.0",
-    "mocha": "^2.3.4",
-    "semistandard": "^8.0.0",
-    "shx": "^0.1.1",
-    "sinon": "^1.17.5",
-    "sinon-chai": "^2.8.0",
-    "snazzy": "^4.0.0",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-sinon-chai": "^2.0.2",
+    "mocha": "^6.2.0",
+    "semistandard": "^13.0.1",
+    "shx": "^0.3.2",
+    "sinon": "^7.4.0",
+    "sinon-chai": "^3.3.0",
+    "snazzy": "^8.0.0",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.16.2"
   },
